--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1428,7 +1428,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #fb98b4;
+  background-color: #b2ccd2;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
@@ -1553,7 +1553,7 @@ body {
   color: #ffc432;
 }
 .cid-reRrTYK851 .mbr-gallery-item > div > span {
-  color: #ffc432;
+  color: #000000;
 }
 .cid-relEcVN0Lm {
   padding-top: 90px;
