--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1428,7 +1428,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #b2ccd2;
+  background-color: #ffffff;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
