create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1223,6 +1223,10 @@ body {
 .cid-reRrzgaqPh .mbr-title {
   color: #ffffff;
 }
+.cid-reRrzgaqPh .mbr-card-text,
+.cid-reRrzgaqPh .mbr-section-btn {
+  color: #ffffff;
+}
 .cid-reRrA6p1vS {
   padding-top: 15px;
   padding-bottom: 45px;
@@ -1267,6 +1271,10 @@ body {
   text-align: center;
 }
 .cid-reRrA6p1vS .mbr-title {
+  color: #ffffff;
+}
+.cid-reRrA6p1vS .mbr-card-text,
+.cid-reRrA6p1vS .mbr-section-btn {
   color: #ffffff;
 }
 .cid-reRrC4Ea8h {
